--- a/package.json
+++ b/package.json
@@ -34,6 +34,12 @@
     "bluebird": "1.0.8"
   },
   "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-clean": "^0.4.0",
+    "grunt-concat-in-order": "^0.1.6",
+    "grunt-contrib-concat": "^0.3.0",
+    "grunt-contrib-imagemin": "^0.9.4",
+    "grunt-contrib-uglify": "^0.4.1",
     "supertest": "^0.10.0"
   }
 }
