--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "Proprietary",
   "private": true,
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "node index.js & ./node_modules/.bin/mocha --bail --reporter nyan test/ServerSpec.js; pkill -n node;"
   },
   "dependencies": {
     "knex": "~0.5.7",
@@ -37,6 +38,7 @@
     "grunt": "^0.4.5",
     "grunt-clean": "^0.4.0",
     "grunt-concat-in-order": "^0.1.6",
+    "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.3.0",
     "grunt-contrib-imagemin": "^0.9.4",
     "grunt-contrib-uglify": "^0.4.1",
