--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "license": "Proprietary",
   "private": true,
   "scripts": {
-    "start": "node index.js",
-    "test": "node index.js & ./node_modules/.bin/mocha --bail --reporter nyan test/ServerSpec.js; pkill -n node;"
+    "start": "node index.js"
   },
   "dependencies": {
     "knex": "~0.5.7",
@@ -22,26 +21,23 @@
     "chai": "^1.9.0",
     "forever": "^0.10.11",
     "bcrypt-nodejs": "0.0.3",
-    "grunt": "^0.4.4",
-    "grunt-contrib-jshint": "^0.9.2",
-    "grunt-contrib-concat": "^0.3.0",
-    "grunt-contrib-uglify": "^0.4.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-shell": "^0.6.4",
-    "grunt-contrib-cssmin": "^0.9.0",
-    "grunt-nodemon": "^0.2.1",
-    "grunt-mocha-test": "^0.10.0",
     "mongoose": "~3.8.8",
     "bluebird": "1.0.8"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-contrib-jshint": "^0.9.2",
     "grunt-clean": "^0.4.0",
     "grunt-concat-in-order": "^0.1.6",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.3.0",
     "grunt-contrib-imagemin": "^0.9.4",
     "grunt-contrib-uglify": "^0.4.1",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-shell": "^0.6.4",
+    "grunt-contrib-cssmin": "^0.9.0",
+    "grunt-nodemon": "^0.2.1",
+    "grunt-mocha-test": "^0.10.0",
     "supertest": "^0.10.0"
   }
 }
