--- a/package.json
+++ b/package.json
@@ -7,22 +7,25 @@
   "license": "Proprietary",
   "private": true,
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "node test/ServerSpec.js & ./node_modules/.bin/mocha --bail --reporter nyan test/ServerSpec.js; pkill -n node;"
   },
   "dependencies": {
-    "knex": "~0.5.7",
+    "bcrypt-nodejs": "0.0.3",
+    "bluebird": "1.0.8",
     "bookshelf": "~0.6.4",
-    "sqlite3": "~3.0.5",
+    "chai": "^1.9.0",
+    "ejs": "~0.8.5",
     "express": "~3.4.8",
     "express-partials": "~0.2.0",
-    "ejs": "~0.8.5",
-    "mocha": "^1.17.1",
-    "request": "^2.34.0",
-    "chai": "^1.9.0",
     "forever": "^0.10.11",
-    "bcrypt-nodejs": "0.0.3",
+    "knex": "~0.5.7",
+    "mocha": "^1.17.1",
+    "mongodb": "^2.0.43",
     "mongoose": "~3.8.8",
-    "bluebird": "1.0.8"
+    "promisify": "0.0.3",
+    "request": "^2.34.0",
+    "sqlite3": "~3.0.5"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
